--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "testing docker",
   "main": "index.js",
   "scripts": {
-    "test": "run-test"
+    "start": "node src/index.js"
   },
   "keywords": [
     "test"
   ],
   "author": "ccamposn",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
